# e2x-jupyter-backup

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
e2x_jupyter_backup/: __init__.py  backup_app.py
tests/: __init__.py  conftest.py  test_backupapp.py
